Enhanced base Swagger default config with login + users.
