# src/authorization/middlewares/auth.validation.middleware.ts
@@ -6,6 +6,10 @@ import boom from '@hapi/boom';
 import * as UserService from '../../users/service/user.service';
 import { ExpressErrorHandler } from '../../../services/express';
 
+function sendTokenExpired(res: Res) {
+  return res.status(401).send('refresh_token');
+}
+
 export async function validRefreshToken(req: Req, res: Res, next: Next): Promise<Resp> {
   try { 
     const b = Buffer.from(req.body.refreshToken, 'base64');
@@ -35,20 +39,20 @@ export async function JWTNeeded(req: Req, res: Res, next: Next): Promise<Resp> {
   try {
     const accessToken = req.cookies.accessToken;
     if (!accessToken) {
-      return next(boom.badRequest('missing_token'));
+      return next(boom.unauthorized('missing_token'));
     }
-    
+
     req.jwt = jwt.verify(
       accessToken,
       config.jwtSecret, 
       config.jwtOptions as VerifyOptions
     ) as ReqJWT;
     req.user = await UserService.findById(req.jwt.id, {}, 'all');
-    
-    return (req.user) ? next() : next(boom.unauthorized('expired_token'));
+
+    return (req.user) ? next() : sendTokenExpired(res);
   } catch (err: any) {
     console.log(`${err}`.red.bold);
-    return next(boom.unauthorized('expired_token'));
+    return sendTokenExpired(res);
   }
 };
 
@@ -56,16 +60,16 @@ export async function ExpireJWTNeeded(req: Req, res: Res, next: Next): Promise<R
   try {
     const accessToken = req.cookies.accessToken;
     if (!accessToken) {
-      return next(boom.badRequest('missing_token'));
+      return next(boom.unauthorized('missing_token'));
     }
     req.jwt = jwt.decode(
       accessToken
     ) as ReqJWT;
     req.user = await UserService.findById(req.jwt.id, {}, 'all');
 
-    return (req.user) ? next() : next(boom.unauthorized('expired_token'));
+    return (req.user) ? next() : sendTokenExpired(res);
   } catch (err: any) {
     console.log(`${err}`.red.bold);
-    return next(boom.unauthorized('expired_token'));
+    return sendTokenExpired(res);
   }
 };
